<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_popup_border">

    <!--Game-Name Guidelines-->

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/gamename_right_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent=".80" />

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/gamename_left_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent=".20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gamename_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gamename_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20" />

    <!--Game-Name-->

    <TextView
        android:id="@+id/gameName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/game_name"
        android:textColor="@color/neon_pink"
        android:gravity="center|center_vertical"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/retro_gaming"
        app:layout_constraintBottom_toTopOf="@+id/gamename_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/gamename_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/gamename_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/gamename_top_guideline" />

    <!--Game-Name-Input Guidelines-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gamename_input_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gamename_input_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".40" />

    <!--Game-Name-Input-->

    <EditText
        android:id="@+id/gameNameInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|center_vertical"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:inputType="textFilter"
        android:textColor="@color/neon_pink"
        android:background="@drawable/custom_pink_border_button"
        android:fontFamily="@font/retro_gaming"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/gamename_input_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/gamename_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/gamename_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/gamename_input_top_guideline" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".55" />

    <!--Password-Text-->

    <TextView
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="center|center_vertical"
        android:text="@string/password"
        android:textColor="@color/neon_green"
        android:fontFamily="@font/retro_gaming"
        android:alpha="0.3"
        app:layout_constraintBottom_toTopOf="@+id/password_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/gamename_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/gamename_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/password_top_guideline" />

    <!--Password-Input Guidelines-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_input_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_input_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />

    <!--Password-Input-->

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custom_green_border_button"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:gravity="center|center_vertical"
        android:inputType="textFilter"
        android:textColor="@color/neon_green"
        android:fontFamily="@font/retro_gaming"
        android:alpha="0.3"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/password_input_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/gamename_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/gamename_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/password_input_top_guideline"
        tools:ignore="TextFields" />

    <!--Cancel-Button Guideline-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cancel_button_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".13" />


    <!--Cancel-Button-->

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:background="@drawable/custom_cancel_button"
        android:fontFamily="@font/retro_gaming"
        app:layout_constraintBottom_toTopOf="@+id/gamename_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button_right_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!--Private-Checkbox Guideline-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/private_checkbox_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/private_checkbox_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <!--Private-Checkbox-->

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/privateCheckBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:button="@null"
        android:background="@drawable/custom_checkbox"
        app:layout_constraintBottom_toTopOf="@+id/gamename_input_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/private_checkbox_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/private_checkbox_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/gamename_input_top_guideline" />

    <!--Private-Text-->

    <TextView
        android:id="@+id/privateText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/privateText"
        android:autoSizeTextType="uniform"
        android:gravity="center|center_vertical"
        android:textColor="@color/neon_green"
        android:fontFamily="@font/retro_gaming"
        app:layout_constraintBottom_toTopOf="@+id/gamename_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/private_checkbox_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/private_checkbox_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/gamename_top_guideline" />

    <!--Create-Game-Button Guideline-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_game_button_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_game_button_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_game_button_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_game_button_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />

    <Button
        android:id="@+id/createGameButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/create_game"
        android:autoSizeTextType="uniform"
        android:textColor="@color/neon_blue"
        android:gravity="center|center_vertical"
        android:background="@drawable/custom_green_border_button"
        android:backgroundTint="@color/neon_blue"
        android:fontFamily="@font/retro_gaming"
        app:layout_constraintBottom_toTopOf="@+id/create_game_button_bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/create_game_button_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/create_game_button_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/create_game_button_top_guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>